# IndiGo-POC

./: .gitignore  clean-architecture.md  main.py  pyproject.toml
backend/: .env.example  main.py  requirements.txt
backend/applications/: __init__.py
backend/applications/interfaces/: audit_log_repository.py  crew_repository.py  disruption_repository.py  flight_repository.py  roster_repository.py
backend/applications/use_cases/: get_compliance_rules.py  get_flights_by_date_range.py  update_compliance_rules.py
backend/domain/: __init__.py
backend/domain/entities/: audit_log.py  crew.py  disruption.py  flight.py  roster.py
backend/domain/exceptions/: __init__.py
backend/domain/services/: rostering_service.py
backend/infrastructure/: __init__.py  container.py  settings.py
backend/infrastructure/ai/: cursor_client.py  groq_client.py  openai_client.py  perplexity_client.py  rag_service.py  scraper.py
backend/infrastructure/api/: __init__.py
backend/infrastructure/database/: __init__.py  audit_log_repository.py  core.py  crew_repository.py  disruption_repository.py  flight_repository.py  repositories.py  roster_repository.py  seed_disruptions.sql
backend/tests/: test_api_basic.py  test_disruptions.py  test_health.py
docs/: REFactor-Plan.md
frontend/: README.md  convert-to-vite.sh  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css  main.tsx
scripts/: check_database.py  create_tables.py  database_migration.py  fetch_and_index_regulations.py  sample_data_creator.py  simulate_issues.py
(+27 files in other folders)
